<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity_register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/regusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hname"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/regpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hpass"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/regconfpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/hconfpass"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btnreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/muda"
        android:text="@string/register"
        android:textColor="@color/black"
        style="@style/Widget.AppCompat.Button.Colored"/>
    <TextView
        android:id="@+id/tvregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/backtologin"/>

</LinearLayout>