<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuUtama">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:background="@drawable/bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/txtjdl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/coklat_muda"
                android:text="@string/judul"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />

        </RelativeLayout>

        <ImageView
            android:layout_width="371dp"
            android:layout_height="165dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/lambang"/>

        <ImageView
            android:layout_width="355dp"
            android:layout_height="207dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/cirebon" />

        <GridLayout
            android:id="@+id/mainGrid"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="14dp"
            app:srcCompat="@drawable/bgalam">

            <!-- Row 1 -->

            <!-- Column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/muda"
                app:srcCompat="@drawable/login">

                <LinearLayout
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="133dp"
                        app:srcCompat="@drawable/alam" />

                    <Button
                        android:id="@+id/wAlam"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bwalam"
                        app:backgroundTint="@color/crem" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Column 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/muda">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="133dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/religi" />

                    <Button
                        android:id="@+id/wReligi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bwreligi"
                        app:backgroundTint="@color/crem" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Row 2 -->

            <!-- Column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/muda">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="133dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/kuliner" />

                    <Button
                        android:id="@+id/wKuliner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bwkuliner"
                        app:backgroundTint="@color/crem" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Column 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/muda">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="133dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/aboutme" />

                    <Button
                        android:id="@+id/about"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/babout"
                        app:backgroundTint="@color/crem" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Row 3 -->

            <!-- Column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/muda">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="133dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/exit" />

                    <Button
                        android:id="@+id/exit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bexit"
                        app:backgroundTint="@color/crem" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</ScrollView>